# recombee-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude-plans/: 01-initial-implementation.md  02-write-tools-plan.md  README.md
.claude/agents/: code-reviewer.md  security-auditor.md
.claude/commands/: inspector.md  new-tool.md  plan.md
.claude/skills/recombee-api/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration.yml  release.yml
src/recombee_mcp/: __init__.py  __main__.py  audit.py  client.py  errors.py  server.py  settings.py
src/recombee_mcp/tools/: __init__.py  catalog.py  meta.py  recommendations.py  search.py  segments.py
tests/: conftest.py
tests/unit/: test_audit.py  test_settings.py  test_version.py
tests/unit/tools/: test_catalog.py  test_meta.py  test_recommendations.py  test_search.py  test_segments.py
