[project]
name = "recombee-mcp"
version = "0.1.0"
description = "Production-grade MCP server wrapping the Recombee recommendation engine API for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Martin Špaček", email = "martin@martinspacek.com" }]
keywords = ["mcp", "recombee", "recommendation", "claude", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0",
    "recombee-api-client",
    "pydantic-settings>=2.0",
    "structlog",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/spagr/recombee-mcp"
Documentation = "https://github.com/spagr/recombee-mcp#readme"
Issues = "https://github.com/spagr/recombee-mcp/issues"
Changelog = "https://github.com/spagr/recombee-mcp/blob/main/CHANGELOG.md"

[project.scripts]
recombee-mcp = "recombee_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recombee_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "pre-commit",
    "pip-audit",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "PTH", "RUF", "S", "N", "ANN", "A"]
ignore = [
    "S101",    # use of assert (needed in tests)
    "ANN401",  # Any is pragmatic for FastMCP/SDK interop
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "ANN"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["recombee_mcp"]
mypy_path = "src"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["recombee_api_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=recombee_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["recombee_mcp"]

[tool.coverage.report]
show_missing = true
